--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "welfare",
   "version": "0.1.0",
+  "home": ".",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -16,7 +17,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "PUBLIC_URL=/welfare-form react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
