--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "npm": "^10.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-signature-canvas": "^1.0.6",
