--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-signature-canvas": "^1.0.6",
+    "react-to-print": "^2.14.15",
     "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
