--- a/package.json
+++ b/package.json
@@ -4,27 +4,26 @@
   "home": ".",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.2",
     "@hookform/resolvers": "^3.3.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
-    "i": "^0.3.7",
-    "npm": "^10.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-router-dom": "^6.18.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "react-signature-canvas": "^1.0.6",
     "react-to-print": "^2.14.15",
-    "react-toastify": "^9.1.3",
+    "react-toastify": "9.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PUBLIC_URL=/welfare-form react-scripts start",
     "build": "PUBLIC_URL=/welfare-form react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
